<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="4dp">


    <TextView
        android:id="@+id/app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/title"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toTopOf="@+id/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expressionField"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/Divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="540dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/divider" />

    <TextView
        android:id="@+id/expressionField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/button_text_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSeven"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintEnd_toStartOf="@+id/buttonEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonEight"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintEnd_toStartOf="@+id/buttonNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlusMinus"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonNine"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintEnd_toStartOf="@+id/buttonX"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonPercent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonX"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pink_small_button_settings"
        android:text="@string/X"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonZero"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pink_small_button_settings"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/buttonResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonThree"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonComma"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonZero"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonResult"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pink_small_button_settings"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonComma"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAC"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlusMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Divider"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonPlusMinus"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/plusMinus"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintEnd_toStartOf="@+id/buttonPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/Divider"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonPercent"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlusMinus"
        app:layout_constraintTop_toBottomOf="@+id/Divider"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/pink_small_button_settings"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintTop_toBottomOf="@+id/Divider"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonFour"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintEnd_toStartOf="@+id/buttonFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonFive"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toStartOf="@+id/buttonSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonSix"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pink_small_button_settings"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonX"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonOne"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonTwo"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/buttonComma"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonThree"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/purple_button_settings"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/buttonComma"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="558dp" />

</androidx.constraintlayout.widget.ConstraintLayout>